# pipelines

./: LICENSE  Pipeline.hs  README  README.md  concurrent-pipelines.cabal
Control/Concurrent/: Pipeline.hs
Control/Concurrent/Pipelines/: Combinators.hs  IO.hs  Internal.hs  Lifecycle.hs
